--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,7 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> French: Au revoir, les amis! </li>
+  <li> German: Auf wiedersehen, freunde! </li>
+  <li> Italian: Arrivederci, amici! </li>
 </ul>
